--- a/binutils/arm-mips-src-20131011/sources/ppl/src/ppl.hh.dist
+++ b/binutils/arm-mips-src-20131011/sources/ppl/src/ppl.hh.dist
@@ -13068,9 +13068,11 @@ ascii_dump(std::ostream& s, const T& t) {
 template <typename T>
 typename Enable_If<Is_Native_Or_Checked<T>::value, bool>::type
 ascii_load(std::istream& s, T& t) {
-  if (std::numeric_limits<T>::is_exact)
+  if (std::numeric_limits<T>::is_exact) {
     // An exact datatype: input from pretty printed version is accurate.
-    return s >> t;
+    s >> t;
+    return !s.fail();
+  }
   else {
     // An inexact datatype (probably floating point):
     // first load its hexadecimal representation ...
